--- a/src/components/ajaxtest.html
+++ b/src/components/ajaxtest.html
@@ -7,10 +7,28 @@
 </head>
 <body>
 <input type="text" name="" id="">
+<!--
+<datalist>
+  <option value="">1</option>
+  <option value="">2</option>
+  <option value="">3</option>
+  <option value="">4</option>
+  <option value="">5</option>
+  <option value="">6</option>
+  <option value="">7</option>
+  <option value="">8</option>
+  <option value="">9</option>
+  <option value="">10</option>
+</datalist>
+-->
 <script>
-  $("input").trigger("focus")
 /*
-  var url="http://test.yjzone.cn/home/account.json"
+  $("input").trigger("focus")
+  $("select").change(function () {
+    console.log(this.selectedIndex)
+  })
+*/
+/*
   var data={
     "jsonrpc": "2.0",
     "method": "login",
@@ -21,6 +39,17 @@
     "auth": "",
     "id":21001
   }
+  */
+var url="http://test.yjzone.cn/home/account.json"
+var data={
+  "jsonrpc": "2.0",
+  "method": "findMateEntsByCat",
+  "params": {
+    "categoryId":"3"
+  },
+  "auth": "",
+  "id":24010
+}
   $.ajax({
     type: 'POST',
     url:  url,
@@ -31,7 +60,6 @@
     },
     dataType: 'json'
   });
-*/
 /*
 $.ajax({
   url:"http://gongtuo.qixincloud.com/api/v1/teams",
@@ -55,6 +83,9 @@ $.ajax({
     alert(1)
   }
 })
+*/
+/*
+console.log(new Date(1498443575494).toString().substring(4,15))
 */
 </script>
 </body>
